<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.carnetvaccin.app</groupId>
	<artifactId>carnetvaccin-app</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>carnetvaccin-app</name>

	<prerequisites>
		<maven>3</maven>
	</prerequisites>

	<properties>
		<vaadin.version>8.14.3</vaadin.version>
		<vaadin.plugin.version>8.14.3</vaadin.plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<validation-api.version>2.0.1.Final</validation-api.version>
		<javaee-api.version>8.0</javaee-api.version>
		<commons-email.version>1.4</commons-email.version>
		<slf4j-simple.version>2.0.17</slf4j-simple.version>
		<lombok.version>1.18.38</lombok.version>
		<!-- Maven 		-->
		<maven-clean-plugin.version>3.4.1</maven-clean-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
		<!-- Persistence  -->
		<hibernate-core.version>5.6.15.Final</hibernate-core.version>
		<eclipselink.version>2.7.11</eclipselink.version>
		<sqlite-jdbc.version>3.49.1.0</sqlite-jdbc.version>
		<sqlite-dialect.version>0.1.4</sqlite-dialect.version>
		<!-- Tests 		-->
		<mockito-all.version>1.10.19</mockito-all.version>
		<junit.version>4.13.2</junit.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<vaadin-confirm-dialog-flow.version>4.0.2</vaadin-confirm-dialog-flow.version>
		<jbcrypt.version>0.4</jbcrypt.version>

	</properties>

	<repositories>
		<repository>
			<id>vaadin-addons</id>
			<url>https://maven.vaadin.com/vaadin-addons</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>${validation-api.version}</version>
			</dependency>

			<dependency>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-bom</artifactId>
				<version>${vaadin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!---*************************** Vaadin ***************************************-->
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-server</artifactId>
			<version>${vaadin.version}</version>
		</dependency>

		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-push</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-client-compiled</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-themes</artifactId>
		</dependency>
		<dependency>
			<groupId>com.vaadin</groupId>
			<artifactId>vaadin-cdi</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<!---*************************** Others  ***************************************-->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>
<!--		Bcrypt -->
		<dependency>
			<groupId>org.mindrot</groupId>
			<artifactId>jbcrypt</artifactId>
			<version>${jbcrypt.version}</version>
		</dependency>

		<!-- JavaMail for email functionalities -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons-collections4.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j-simple.version}</version>
			<scope>test</scope>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.vaadin.addons</groupId>-->
<!--			<artifactId>vaadin-combobox-multiselect</artifactId>-->
<!--			<version>2.8</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.vaadin</groupId>
			<artifactId>prefixcombobox</artifactId>
			<version>1.5.0</version>
		</dependency>


		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-simple.version}</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.slf4j</groupId>-->
<!--			<artifactId>slf4j-simple</artifactId>-->
<!--			<version>${slf4j-simple.version}</version>-->
<!--			<scope>runtime</scope>-->
<!--		</dependency>-->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>

		<!---*************************** Persistence  ***************************************-->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate-core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>${eclipselink.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
			<version>${eclipselink.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite-jdbc.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.gwenn</groupId>
			<artifactId>sqlite-dialect</artifactId>
			<version>${sqlite-dialect.version}</version>
		</dependency>


		<!---*************************** Testing ***************************************-->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito-all.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>carnetvaccin-app</finalName>
		<!--		<defaultGoal>package tomee:run</defaultGoal>-->
		<plugins>
			<!--			<plugin>-->
			<!--				<groupId>org.apache.tomee.maven</groupId>-->
			<!--				<artifactId>tomee-maven-plugin</artifactId>-->
			<!--				<version>${tomee.version}</version>-->
			<!--				<configuration>-->
			<!--					<context>${project.artifactId}</context>-->
			<!--					<tomeeClassifier>plus</tomeeClassifier>-->
			<!--					<debugPort>8000</debugPort>-->
			<!--					<tomeeAjpPort>8009</tomeeAjpPort>-->
			<!--					<tomeeHttpPort>8080</tomeeHttpPort>-->
			<!--					<tomeeShutdownPort>8005</tomeeShutdownPort>-->
			<!--					&lt;!&ndash; no <path> tag &ndash;&gt;-->
			<!--					<path>${tomee-maven-plugin-path}</path>-->
			<!--					<useBinaries>true</useBinaries>-->
			<!--				</configuration>-->
			<!--				<executions>-->
			<!--					<execution>-->
			<!--						<id>deploy-it</id>-->
			<!--						<phase>none</phase>-->
			<!--						<goals>-->
			<!--							<goal>deploy</goal>-->
			<!--						</goals>-->
			<!--						<configuration>-->
			<!--							<path>${tomee-maven-plugin-path}</path>-->
			<!--						</configuration>-->
			<!--					</execution>-->
			<!--					<execution>-->
			<!--						<id>undeploy-it</id>-->
			<!--						<phase>none</phase>-->
			<!--						<goals>-->
			<!--							<goal>undeploy</goal>-->
			<!--						</goals>-->
			<!--						<configuration>-->
			<!--							<path>someear-1.0-SNAPSHOT</path>-->
			<!--						</configuration>-->
			<!--					</execution>-->
			<!--				</executions>-->
			<!--			</plugin>-->
			<!--			<plugin>-->
			<!--				<groupId>org.apache.tomee.maven</groupId>-->
			<!--				<artifactId>tomee-maven-plugin</artifactId>-->
			<!--				<version>8.0.1-SNAPSHOT</version>-->
			<!--				<configuration>-->
			<!--					<tomeeClassifier>plume</tomeeClassifier>-->
			<!--					<args>-Xmx512m -XX:PermSize=256m</args>-->
			<!--				</configuration>-->
			<!--			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<!-- Exclude an unnecessary file generated by the GWT compiler. -->
					<packagingExcludes>WEB-INF/classes/VAADIN/widgetsets/WEB-INF/**</packagingExcludes>
				</configuration>
			</plugin>


			<!--			<plugin>-->
			<!--				 <groupId>fish.payara.maven.plugins</groupId>-->
			<!--				 <artifactId>payara-micro-maven-plugin</artifactId>-->
			<!--				 <version>1.0.5</version>-->
			<!--			 </plugin>-->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>com.vaadin</groupId>
				<artifactId>vaadin-maven-plugin</artifactId>
				<version>${vaadin.plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>update-theme</goal>
							<goal>update-widgetset</goal>
							<goal>compile</goal>
							<!-- Comment out compile-theme goal to use on-the-fly theme compilation -->
							<goal>compile-theme</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
				<!-- Clean up also any pre-compiled themes -->
				<configuration>
					<filesets>
						<fileset>
							<directory>src/main/webapp/VAADIN/themes</directory>
							<includes>
								<include>**/styles.css</include>
								<include>**/styles.scss.cache</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!--		<profile>-->
		<!--			<id>deploy</id>-->
		<!--			<activation>-->
		<!--				<activeByDefault>true</activeByDefault>-->
		<!--			</activation>-->
		<!--			<properties>-->
		<!--				<tomee-maven-plugin-path>target/carnetvaccin-app.war</tomee-maven-plugin-path>-->
		<!--			</properties>-->
		<!--		</profile>-->
		<!--		<profile>-->
		<!--			<id>undeploy</id>-->
		<!--			<properties>-->
		<!--				<tomee-maven-plugin-path>carnetvaccin-app</tomee-maven-plugin-path>-->
		<!--			</properties>-->
		<!--		</profile>-->
		<profile>
			<!-- Vaadin pre-release repositories -->
			<id>vaadin-prerelease</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>

			<repositories>
				<repository>
					<id>vaadin-prereleases</id>
					<url>http://maven.vaadin.com/vaadin-prereleases</url>
				</repository>
				<repository>
					<id>vaadin-snapshots</id>
					<url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
					<releases>
						<enabled>false</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
			</repositories>
			<pluginRepositories>
				<pluginRepository>
					<id>vaadin-prereleases</id>
					<url>http://maven.vaadin.com/vaadin-prereleases</url>
				</pluginRepository>
				<pluginRepository>
					<id>vaadin-snapshots</id>
					<url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
					<releases>
						<enabled>false</enabled>
					</releases>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</pluginRepository>
			</pluginRepositories>
		</profile>
	</profiles>

</project>
